<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_start_alarm"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/menu_start_alarm"/>
    <item
        android:id="@+id/menu_edit_alarm"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit_alarm"/>
    <item
        android:id="@+id/menu_delete_alarm"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete_alarm"/>
    <item
        android:id="@+id/menu_add_alarm"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_add_alarm"/>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_preferences"/>

</menu>
