<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_general">
        <ListPreference
            android:title="@string/settings_alarm_time_title"
            android:summary="@string/settings_alarm_time_summary"
            android:dialogTitle="@string/settings_alarm_time_title"
            android:key="alarm_time"
            android:selectable="true"
            android:enabled="true"
            android:entries="@array/alarm_time"
            android:entryValues="@array/alarm_time"
            android:defaultValue="1"></ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_default">
        <ListPreference
            android:title="@string/settings_alarm_distance_title"
            android:summary="@string/settings_alarm_distance_summary"
            android:dialogTitle="@string/settings_alarm_distance_title"
            android:key="alarm_distance"
            android:selectable="true"
            android:enabled="true"
            android:entries="@array/alarm_distance"
            android:entryValues="@array/alarm_distance"
            android:defaultValue="1"></ListPreference>
    </PreferenceCategory>
</PreferenceScreen>
